# primary-productivity

./: .gitignore  README.md  pyproject.toml
notebooks/: 01 Get Integrated NPP from CalCOFI Bottle Data.ipynb  02 Get Satellite Data.ipynb  03 Combine NPP and Satellite Data.ipynb  04 Inspect Satellite Data.ipynb  05 NPP Models.ipynb
notebooks/Kahru satellite data version/: 02 Get Satellite Data Kahru data.ipynb  03 Combine NPP and Satellite Data Kahru data.ipynb
