[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "primary_productivity"
version = "0.1.0"
description = "Tools for analyzing primary productivity satellite data"
dependencies = [
    "pandas",
    "matplotlib",
    "seaborn",
    "numpy"
]

[tool.setuptools.packages.find]
where = ["src"]